[package]
name = "zenn2press"
version = "0.1.0"
authors = ["ryohidaka <39184410+ryohidaka@users.noreply.github.com>"]
edition = "2021"

description = "A Rust library to convert Zenn contents to VitePress"
repository = "https://github.com/ryohidaka/zenn2press-rs"
readme = "README.md"
keywords = ["zenn", "VitePress", "markdown"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
colored = "2.1.0"
figlet-rs = "0.1.5"
futures = "0.3.30"
indicatif = "0.17.8"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.10.1"
tokio = { version = "1.39.2", features = ["full"] }
